# YouTubeWikiBot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
src/: main.py  utils.py  wiki_bot.py  youtube_api.py
temp_all_files/: setup.py
temp_all_files/src/: utils.py
tests/: test_wiki_bot.py
